# lasercutter

./: Cargo.toml
laserCutter/: Cargo.toml  gcode_box-all.gcode  gcode_test_cases.svg.gcode  workspace_box-all.yaml  workspace_test_cases.yaml
laserCutter/src/: main.rs
laserCutter/src/gcode_emulator/: mod.rs  renderer.rs
laserCutter/src/gcode_generator/: workspace.rs
laserCutter/src/gcode_generator/cut/: mod.rs  svg_parser.rs
laserCutter/src/types/: gcode.rs  transform.rs
laser_cli/: Cargo.toml
laser_cli/src/: main.rs
laser_cutter/: Cargo.toml
laser_cutter/src/: lib.rs
laser_cutter/src/gcode_emulator/: mod.rs  null_renderer.rs  pixel_renderer.rs  renderer.rs  svg_renderer.rs
laser_cutter/src/gcode_generator/: mod.rs  workspace.rs
laser_cutter/src/gcode_generator/cut/: mod.rs  svg_parser.rs  usvg_parser.rs
laser_cutter/src/gcode_generator/operation/: cut.rs  mod.rs  raster.rs
laser_cutter/src/types/: coord.rs  gcode.rs  machine_settings.rs  mod.rs  transform.rs
laser_gui/: Cargo.toml  Dioxus.toml
laser_gui/assets/: tailwind.css
laser_gui/src/: main.rs  style.rs  tracing_logger.rs
laser_gui/src/components/: connection_controls.rs  cutlist.rs  leftbar.rs  log_entry.rs  log_window.rs  machine_controls.rs  mod.rs  operationslist.rs  repeat_button.rs  rightbar.rs  statusbar.rs  topbar.rs  workspace.rs
resources/: test.gcode
src/: main.rs  types.rs
src/gcode_emulator/: mod.rs  renderer.rs  svg_renderer.rs
src/gcode_generator/: mod.rs  workspace.rs
src/gcode_generator/cut/: mod.rs  svg_parser.rs
test_resources/: .gitignore
test_resources/box-all/: expected_output.gcode  expected_workspace.yaml
test_resources/test_cases/: expected_output.gcode  expected_workspace.yaml
