[package]
name = "laserCutter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
svg = "0.18.0"
clap = { version = "4.5.55", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dialoguer = "0.12.0"
bitcode = { version = "0.6.9", features = ["serde"] }
base64 = "0.22.1"
deflate = "1.0.0"
inflate = "0.4.5"

[dev-dependencies]
test-case = "3.3.1"