[package]
name = "laser_cutter"
version = "0.1.0"
edition = "2024"

[features]
svg_renderer = []
pixel_renderer = []

[dependencies]
anyhow = "1.0.100"
svg = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bitcode = { version = "0.6.9", features = ["serde"] }
base64 = "0.22.1"
deflate = "1.0.0"
inflate = "0.4.5"
nalgebra = "0.34.1"
usvg = "0.47.0"
image = "0.25.9"
cached = { version = "0.56.0", features = ["proc_macro"] }

[dev-dependencies]
test-case = "3.3.1"